feat: initial stab at improving custom resource handling